fix(explorer): fix color fallback text and spacing

--- a/app/client/stylesheets/components/pu-explorer.sass
+++ b/app/client/stylesheets/components/pu-explorer.sass
@@ -23,16 +23,19 @@
             color: darken($color-primary-dark, 10%)
             font-weight: 700
 
+        ul
+            margin-top: 35px
+
         figure
             display: block
             margin: 20px auto
             height: 30px
 
             h1
-                font-size: 30px
-                font-family: $font-primary
                 font-weight: 700
-                color: #fff
+                font-size: 40px
+                font-family: $font-secondary
+                color: rgba(black, 0.5);
                 display: none
                 text-transform: uppercase
 
